fixed first issues on mobile version

--- a/grillplatz-webseite/src/app/components/navbar/navbar.component.css
+++ b/grillplatz-webseite/src/app/components/navbar/navbar.component.css
@@ -61,18 +61,20 @@
 /* Responsive */
 @media (max-width: 768px) {
   .hamburger {
-    display: block;
-    font-size: 2rem;
+    display: flex;
+    font-size: 1.9rem;
     background: none;
     border: none;
     cursor: pointer;
     color: black;
-
+  
     position: absolute;
     left: 1rem;
-    top: 1.5rem;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 1001;
   }
+  
 
   .nav-links {
     display: none;
