--- a/grillplatz-webseite/src/app/pages/home/home.component.css
+++ b/grillplatz-webseite/src/app/pages/home/home.component.css
@@ -1,7 +1,14 @@
 .home-wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  flex: 1;
+}
+
+.home-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 app-offer-gallery {
@@ -11,7 +18,7 @@ app-offer-gallery {
 .intro-text {
   text-align: center;
   margin-bottom: 2rem;
-  margin: center;
+  margin: 0 auto 2rem auto;
 }
 
 .intro-text h1 {
@@ -43,11 +50,11 @@ app-offer-gallery {
 
 /* Zugriff auf die offer-gallery IN der eingebetteten Komponente */
 :host ::ng-deep app-offer-gallery .p-carousel {
-  max-width: 1600px;
+  max-width: 50%;
   width: 100%;
-  margin: center;
-  transform: scale(0.9);
-  transform-origin: center;
+  margin: 0 auto;
+  padding: 0 1rem;
+  
 }
 
 .footer {
@@ -98,4 +105,10 @@ app-offer-gallery {
 .footer-separator {
   color: #aaa;
 }
+
+.carousel-section {
+  margin-bottom: 2rem;
+  min-height: 200px;
+}
+
 
