--- a/grillplatz-webseite/src/styles.css
+++ b/grillplatz-webseite/src/styles.css
@@ -14,6 +14,11 @@ body {
 html, body {
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
+}
+
+html{
+  box-sizing: border-box;
 }
 
 body {
@@ -40,11 +45,16 @@ footer {
 app-offer-gallery {
   flex-grow: 1;
 }
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 @media (max-width: 768px) {
 main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  min-height: 210vh;
+  min-height: 100vh;
 }
+
 }
